# ExpressionEvaluator

./: CMakeLists.txt  README.md  main.cpp
utils/classes/: Pair.cpp  Pair.h
utils/functions/: countNegativeNumbers.cpp  countNegativeNumbers.h  doubleToCleanString.cpp  doubleToCleanString.h  findOperator.cpp  findOperator.h  findPair.cpp  findPair.h  indexNegativeNumbers.cpp  indexNegativeNumbers.h  replaceGroup.cpp  replaceGroup.h  stringToDouble.cpp  stringToDouble.h
utils/values/: debug.cpp  debug.h  validOperators.cpp  validOperators.h
